<resources>
    <string name="app_name">AgroGuide</string>
    <string name="support">Support</string>
    <string name="setting">Settings</string>
    <string name="othars">Othars</string>
    <string name="ordar">Order</string>
    <string name="indox">Index</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="aboutus">AboutUs </string>
    <string name="user_name">user </string>
    <string name="welcome_to_agroguide">Welcome to AgroGuide</string>
    <string name="entertext">Please enter your code that we have sent to your</string>
    <string name="dummy">Agriculture encompasses crop and livestock production, aquaculture, fisheries, and forestry for food and non-food products.</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="crop_information">Crop Information</string>
    <string name="weather">Weather</string>
    <string name="title_activity_layout_navigation_header">layout_navigation_header</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_fertilizers_prodect">fertilizers_prodect</string>
    <string name="orders">Orders</string>
    <string name="prodect">Product</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="herbiciders">Herbicides</string>
    <string name="seeds">Seeds</string>
    <string name="title_activity_her_strike_product">Her_Strike_product</string>
    <string name="strike">Strike</string>
    <string name="my_acccount">My Acccount</string>
    <string name="order_now">Order Now</string>
    <string name="roundup">Roundup</string>
    <string name="lris">Lris</string>
    <string name="goal">Goal</string>
    <string name="vivaya">Vivaya</string>
    <string name="impyre">Impyre</string>
    <string name="tynzer">Tynzer</string>
    <string name="topper_77">Topper 77</string>
    <string name="_10_26_10">10:26:10</string>
    <string name="kisan_19_19_19">Kisan 19:19:19</string>
    <string name="potassium">Potassium</string>
    <string name="urja_46">Urja 46%</string>
    <string name="_19_19_19">19:19:19</string>
    <string name="_20_20_13">20:20:13</string>
    <string name="gulmohar">Gulmohar</string>
    <string name="gowri">Gowri</string>
    <string name="nk_62040_plus">NK 62040 Plus</string>
    <string name="abhilash">Abhilash</string>
    <string name="avd_756">AVD 756</string>
    <string name="aarti">Aarti</string>
    <string name="dap">DAP</string>
    <string name="targa_super">Targa Super</string>
    <string name="title_activity_her_targa_super_prodect">her_targa_super_prodect</string>
    <string name="category_fertilizers">Category: Fertilizers</string>
    <string name="fertilizer_text">A fertilizer or fertiliser is any material of natural or synthetic origin that is applied to soil or to plant tissues to supply plant nutrients. Fertilizers may be distinct from liming materials or other non-nutrient soil amendments. Many sources of fertilizer exist, both natural and industrially produced.</string>
    <string name="potassium_0_52_34">potassium 0:52:34</string>
    <string name="vikas_neem_royal">Vikas Neem Royal</string>
    <string name="poorna_19">Poorna - 19</string>
    <string name="seeds_text">In botany, a seed is a plant embryo and food reserve enclosed in a protective outer covering called a seed coat. More generally, the term seed means anything that can be sown, which may include seed and husk or tuber. Seeds are the product of the ripened ovule, after the embryo sac is fertilized by sperm from pollen, forming a zygote</string>
    <string name="government_schemes">Government Schemes</string>
    <string name="scheme_details">Scheme details</string>
    <string name="version_0_1">Version:0.1</string>
    <string name="_2024_2024_agroguide_lnc">2024-2024 AgroGuide lnc</string>
    <string name="farming_tips">Farming Techniques</string>
    <string name="market_prices">Market Prices</string>
    <string name="product">Product</string>
    <string name="trending">Trending</string>
    <string name="swapnil_supekar">Swapnil Supekar</string>
    <string name="contact">contact</string>
    <string name="agroguide_techonlogies_pvt_ltd">AgroGuide Techonlogies Pvt.Ltd</string>
    <string name="Loction_info">7/45, Gurudwara Colony, Nigdi, Pimpri-Chinchwad, Maharashtra 411044</string>
    <string name="contect_number">9309144435/8329665856</string>
    <string name="contect_Email">SwpnilSupekar@gmil.com</string>
    <string name="feedback">Feedback</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="enter_your_feedback">Enter your feedback..!</string>
    <string name="submit">Submit</string>
    <string name="gulmohar1">Gulmohar</string>
    <string name="price_1_450_00">Price:- ₹1,450.00</string>
    <string name="_2_kg">2 kg</string>
    <string name="price_180_00">Price:- ₹180.00</string>
    <string name="_500g">500g</string>
    <string name="price_370_00">Price:- ₹370.00</string>
    <string name="_10gm">10gm</string>
    <string name="_4kg">4kg</string>
    <string name="_50g">50g</string>
    <string name="by_insceticides_india_ltd">by Insceticides India Ltd.</string>
    <string name="choose_size_to_see_price">Choose size to see price</string>
    <string name="category_seeds">Category: Seeds</string>
    <string name="product_description">Product Description</string>
    <string name="gromor_10_26_10">Gromor 10:26:10</string>
    <string name="potassium_0_0_50">Potassium 0:0:50</string>
    <string name="navrstna_20_20_13">Navrstna 20:20:13</string>
    <string name="pradhan_mantri_kisan_samman_nidhi">Pradhan Mantri Kisan Samman Nidhi</string>
    <string name="saman_nidhi_text">Pradhan Mantri Kisan Samman Nidhi (PMKISAN, translation: Prime Minister\'s Farmer\'s Tribute Fund) is an initiative by the government of India that give farmers up to ₹6,000 (US$75) per year as minimum income support. The initiative was announced by Piyush Goyal during the 2019 Interim Union Budget of India on 1 February 2019.</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="cancel">Cancel</string>
    <string name="watermelon">Watermelon</string>
    <string name="description">Description</string>
    <string name="watermelon_citrullus_lanatus_">watermelon, (Citrullus lanatus), succulent fruit and vinelike plant of the gourd family (Cucurbitaceae), native to tropical Africa and cultivated around the world. The fruit contains vitamin A and some vitamin C and is usually eaten raw. The rind is sometimes preserved as a pickle.</string>
    <string name="types_and_varieties">Types and Varieties</string>
    <string name="icebox_watermelons_t">Icebox Watermelons: These are small and perfect for individual servings</string>
    <string name="picnic_watermelons_">Picnic Watermelons: Larger than icebox watermelons, they’re great for sharing at picnics and gatherings.</string>
    <string name="seedless_watermelons">Seedless Watermelons: As the name suggests, these varieties have few or no seeds.</string>
    <string name="yellow_orange_fl">Yellow-Orange Fleshed Watermelons: These have a different color of flesh, which can be yellow or orange.</string>
    <string name="climatic_requirements">Climatic Requirements</string>
    <string name="watermelon_is_bo"> A fruit and a vegetable, belonging to the same family as cucumbers, pumpkins and squash.</string>
    <string name="best_climate_fo">Best Climate for Watermelon Watermelon plants love the heat, and need a long and warm growing season of at least 70 to 85 days, depending on the variety, to produce sweet fruit.</string>
    <string name="best_soil_for_wate">Best Soil for Watermelon Watermelon grows best in fertile, well-draining, sandy loam soils.</string>
    <string name="plant_spacing_for_">Plant Spacing for Watermelon Watermelon plants need lots of space to grow and spread out.</string>
    <string name="watermelons_can_f">Watermelons can flourish in both humid and semi-arid environments. However, in humid areas, they may be more prone to fungal foliage diseases.</string>
    <string name="common_diseases_of_watermelon">Common diseases of watermelon</string>
    <string name="anthracnose">Anthracnose</string>
    <string name="fusarium_wilt">Fusarium wilt</string>
    <string name="downy_mildew">Downy mildew</string>
    <string name="powdery_mildew">Powdery mildew</string>
    <string name="gummy_stem_blight">Gummy stem blight</string>
    <string name="root_knot_nematode">Root-knot nematode</string>
    <string name="virus_diseases">Virus diseases</string>
    <string name="cercospora_leaf_spot">Cercospora leaf spot</string>
    <string name="pesticides">Pesticides</string>
    <string name="according_to_the_env">According to the Environmental Working Group’s Shopper’s Guide to Pesticides in Produce, watermelon clocks in at number 32 on the list, meaning that its pesticide load can be relatively high. However, this high pesticide residue is unlikely to permeate into the edible parts of the fruit, unless you plan on using the rind to make pickles.</string>
    <string name="fertilizer_for_watermelon">Fertilizer for Watermelon</string>
    <string name="well_balanced_co">Well-balanced compost and/or rich, homemade compost.</string>
    <string name="small_quantities_of_blood_meal_bone_meal_and_greensand_when_planting">Small quantities of blood meal, bone meal, and greensand when planting.</string>
    <string name="seaweed_extract_it_improves_the_growth_production_and_quality_of_watermelon">Seaweed extract; it improves the growth, production, and quality of Watermelon.</string>
    <string name="nitrogen_based_fertilizer_at_the_onset">Nitrogen-based fertilizer at the onset.</string>
    <string name="ample_potassium_and_phosphorus_for_optimal_melon_production">Ample potassium and phosphorus for optimal melon production.</string>
    <string name="phosphorus_and_pot">Phosphorus and potassium-based fertilizer once the plant begins flowering.</string>
    <string name="list_application">List Application</string>
    <string name="juice_watermelon_ju">Juice: Watermelon juice is a popular beverage, especially during hot summer months, due to its hydrating properties and delicious flavor</string>
    <string name="frozen_treats_wate">Frozen Treats: Watermelon is used to make frozen desserts such as popsicles, sorbets, and granitas, offering a refreshing and healthy alternative to traditional ice creams.</string>
    <string name="cocktails_and_mockt">Cocktails and Mocktails: Watermelon is used in various alcoholic and non-alcoholic beverages, including cocktails, mocktails, and fruit punches, adding a tropical and summery flavor.</string>
    <string name="facial_masks_waterme">Facial Masks: Watermelon extract is used in skincare products such as facial masks, moisturizers, and serums due to its hydrating and soothing properties.</string>
    <string name="hydration_due_to_">Hydration: Due to its high water content, watermelon is considered hydrating and can be beneficial for maintaining proper hydration levels.</string>
</resources>