<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crop_watermelon">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@drawable/trending_bacground"
            android:layout_width="match_parent"
            android:layoutMode="opticalBounds"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nigetiv_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/watermelon"
                    android:textColor="@color/color_white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"

                android:layout_margin="10dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/watermelon_citrullus_lanatus_"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@drawable/round_back_dark_blue_15"
                            app:riv_corner_radius="20dp"
                            android:src="@drawable/watermelon"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/types_and_varieties"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/icebox_watermelons_t"
                        />
                    <TextView
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/picnic_watermelons_"
                        />
                    <TextView
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/seedless_watermelons"
                        />
                    <TextView
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yellow_orange_fl"
                        />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/climatic_requirements"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/watermelon_is_bo"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            app:riv_corner_radius="20dp"
                            android:src="@drawable/cemastri_wotarpol"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_climate_fo"
                        />
                    <TextView
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/best_soil_for_wate"
                        />
                    <TextView
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/plant_spacing_for_"
                        />
                    <TextView
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/watermelons_can_f"
                        />

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/common_diseases_of_watermelon"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anthracnose"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fusarium_wilt"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/downy_mildew"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/powdery_mildew"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gummy_stem_blight"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/root_knot_nematode"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/virus_diseases"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cercospora_leaf_spot"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pesticides"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/according_to_the_env"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fertilizer_for_watermelon"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/well_balanced_co"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/small_quantities_of_blood_meal_bone_meal_and_greensand_when_planting"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seaweed_extract_it_improves_the_growth_production_and_quality_of_watermelon"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nitrogen_based_fertilizer_at_the_onset"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ample_potassium_and_phosphorus_for_optimal_melon_production"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phosphorus_and_pot"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/round_back_dark_blue_15"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/list_application"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/juice_watermelon_ju"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frozen_treats_wate"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cocktails_and_mockt"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facial_masks_waterme"
                    />
                <TextView
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hydration_due_to_"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>