<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/white_rectangle_backgrounds"
    app:cardCornerRadius="20dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
    />

    <EditText
        android:id="@+id/Email_id_forget"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/round_back_dark_blue_15"
        android:hint="@string/enter_your_email"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/cancelbtn"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:text="@string/cancel"/>

    <Button
        android:id="@+id/resetbtn"
        android:layout_weight="1"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reset"/>
</LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>